--- a/doc/a3.md
+++ b/doc/a3.md
@@ -10,8 +10,8 @@ However, one possible risk of adding a keyboard shortcut to the clear downloads 
 ## Solution:
 After taking a deep look at the code behind the downloads screen, I found some simple fixes to both problems with the clear downloads button. 
 First, on line 122 of the “browser/locales/en_US/chrome/browser/downloads/downloads.dtd” file, we need to add a new line to set the accesskey of the clearDownloadsButton as “D”. 
-After this, we must go to line 350 of the “browser/components/places/content/places.xul” file and set the accesskey attribute of the element to use the new one we just created in the other file. 
-Now, the clear downloads button has an access key of “D”, and pressing Shift+D on the show downloads screen will cause the button to be pressed.
+After this, we must go to line 352 of the “browser/components/places/content/places.xul” file and set the accesskey attribute of the element to use the new one we just created in the other file. 
+Now, the clear downloads button has an access key of “C”, and pressing Shift+C on the show downloads screen will cause the button to be pressed.
 Fixing the tabbing issue is even simpler. On the same file places.xul, right under the new line we just added, we can add another new line that sets the tabindex attribute to 2. This causes the button to be the third element selected in order of tabbing, and forces it to become selected when we press tab 3 times.
 From this, both issues should be fixed.
 
@@ -21,4 +21,11 @@ We can test the issue simply by opening Firefox, and following these steps:
 2. Open Firefox Library window. (e.g. Ctrl+Shift+H)
 3. In the left navigation sidebar go to Downloads.
 4. Press tab a few times and confirm the button gets selected, and press enter to test it. Confirm the downloads get cleared.
-5. Repeat steps 1-3, this time, instead of pressing tab, press Shift+D. Confirm that the downloads get cleared.
+5. Repeat steps 1-3, this time, instead of pressing tab, press Shift+C. Confirm that the downloads get cleared.
+
+## Screenshots:
+<p align:"center"><br>
+<b>Before: Pressing tab only cycles between "Downloads", "me.jpg" and "Search Downloads"</b> <br>
+<img src="https://imgur.com/tVc4Xt3" style="float:left;"> <br><br>
+<b>After: Pressing tab now also cycles to "Clear Downloads", and pressing Shift+C presses it. </b> Here, we see the button highlighted by tabbing, and with the C underlined, indicating its access key.</b> <br>
+<img src="https://imgur.com/VE75aFa" style="float:center;"> <br><br>
