--- a/doc/a3.md
+++ b/doc/a3.md
@@ -26,6 +26,6 @@ We can test the issue simply by opening Firefox, and following these steps:
 ## Screenshots:
 <p align:"center"><br>
 <b>Before: Pressing tab only cycles between "Downloads", "me.jpg" and "Search Downloads"</b> <br>
-<img src="https://imgur.com/tVc4Xt3" style="float:left;"> <br><br>
+<img src="https://imgur.com/tVc4Xt3.jpg" style="float:left;"> <br><br>
 <b>After: Pressing tab now also cycles to "Clear Downloads", and pressing Shift+C presses it. </b> Here, we see the button highlighted by tabbing, and with the C underlined, indicating its access key.</b> <br>
-<img src="https://imgur.com/VE75aFa" style="float:center;"> <br><br>
+<img src="https://imgur.com/VE75aFa.jpg" style="float:center;"> <br><br>
