--- a/doc/a3.md
+++ b/doc/a3.md
@@ -1,2 +1,18 @@
 https://bugzilla.mozilla.org/show_bug.cgi?id=1530771
 
+
+Diagnosis of your bug. Describe in English what the issue is, and what the benefit of fixing will bring. What risks are there, if any?
+Diagnosis. Clearly describes the problem and what needs to be done to solve it
+
+Testing document - A process (or description of a process) by which you’d evaluate the success of your work.  (See Note 1) How do you know your change addresses the bug?
+Test plan: Clearly articulates how to demonstrate that the problem has been fixed
+
+Propose a  solution. Describe in English what you’d do, and the step by step process you’d follow. The goal is to present your reasoning to the person who would be evaluating your patch.
+Fix: Appropriate technical solution of the bug, in line with any suggestions from the mentor and mozilla guidelines.
+
+Screen shots, if necessary, showing issue and the correct behaviour with your fix applied.
+
+Collaboration: Clear and appropriate communication with mozilla mentor and/or teaching staff
+
+Patch and comments: crystal clear commit message and explanatory comment in bugzilla.
+
