Issue resolved with wontfix and closed by reporter

--- a/doc/a3.md
+++ b/doc/a3.md
@@ -53,6 +53,12 @@ The final custom statement needed to have certain things changed to accommodate 
 - When type is specified, it has to either be a str, an int, or a bool, not an enum.
 - For arguments that have variable length, the valid argparse action is append, not extend.
 
+### UPDATE 20190308
+
+After presenting my solution to the reporter for the bug, I was informed that fixing this issue would be worth the risk of breaking Raptor in production.
+
+![1552075418878](assets/1552075418878.png)
+
 ## Testing
 
 - Testing was done by running raptor tests locally and passing in arguments both ways mentioned by the requirements. 
