Fixed wrong Bug # in doc

--- a/doc/a3.md
+++ b/doc/a3.md
@@ -1,4 +1,4 @@
-# Bugzilla: [Bug 152905](https://bugzilla.mozilla.org/show_bug.cgi?id=1529075)
+# Bugzilla: [Bug 1529075](https://bugzilla.mozilla.org/show_bug.cgi?id=1529075)
 
 > Use argparse to get local command line opts in Raptor’s mozharness script
 
