Adding supporting screenshots of problems and communication

--- a/doc/a3.md
+++ b/doc/a3.md
@@ -8,9 +8,13 @@ If the firefox nightly build is being run on "work offline" mode and someone att
 The reporter of the bug noticed the issue while working on the permanent offline mode. However he forgot that his buld was working offline when he accessed the about menu and was thus mislead into believing his build was upto date. The incident could repeat with future developers who are testing the nightly build in offline mode. Furthermore, trying to access the update server despite knowing that the build is in offline mode can be an exploitable security vulnerability in the future as it could reveal the queries which are necessary to access firefox's update server by inducing an error. Thus fixing this issue will remove a potential pitfall for developers working on with the offline mode and could potentially fix a security vulnerability as well. 
 
 ### Potential Risk
+Since the solution involves modifying the auto update feature of the firefox nightly build, a mistake might permanently disable the auto update feature even when not working in offline mode. Thus the correct block of code must be located and inhibited when in offline mode
 
 ### Solution
-
-### Benefit
+The auto update feature is located in the extensions.js file of the gecko-dev repository. It is accessed through the path mozilla-central/source/toolkit/mozapps/extensions/content. Within this file the block of code responsible for auto-updating is is only accessed if the browser is not in offline mode. This can be checked using the command Services.io.offline. If the browser is not in offline mode, the auto update function is allowed to initiate. If the browser is in offline mode, the update function does not initiate and a message is sent to the console reminding the developer that the browser is in offline mode and auto updates are blocked currently.
 
 ## Testing
+Initially the built in tests for firefox are run using ./mach test. If all tests pass, the first of two stages of manual testing begins. For the first stage, the nightly build is run with the offline mode closed by leaving the work offline checkbox unchecked. Then About Nightly is clicked from the Help dropdown menu from the menu bar. If the auto updater checks for updates by displaying a loading circle and displays the message and no warning appears in the console regarding offline mode being activated, then the first stage of the manual testing is successful. Then the work offline checkbox is checked and About Nightly is clicked again. If the update message is displayed without the loading circle and a warning about updates being blocked is displayed in the console then the second stage of manual testing is successful and the bug has been fixed with the current changes in the code. 
+
+## Collaboration
+A message of interest was left on the bugzilla page and an email was sent to the current assignee of the bug to express interest in continuing work to fix the bug. A screenshot of the email is provided in the doc folder. The assignee then reassigned me to the bug and gave me guidance on where to begin in order to find the bug. 
