--- a/doc/a3.md
+++ b/doc/a3.md
@@ -5,10 +5,10 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=701733
 If the firefox nightly build is being run on "work offline" mode and someone attempts to access "About Nightly" under the help dropdown menu in the menubar, the about menu still checks for updates. This check fails as firefox is in offline mode and does not access the internet. Thus a default message of the build being up to date is displayed. This can be viewed as misleading and pointless as the build should know that the offline mode is activated and should not attempt to connect to the update server.
 
 ### Benefit
-The reporter of the bug noticed the issue while working on the permanent offline mode. However he forgot that his buld was working offline when he accessed the about menu and was thus mislead into believing his build was upto date. The incident could repeat with future developers who are testing the nightly build in offline mode. Furthermore, trying to access the update server despite knowing that the build is in offline mode can be an exploitable security vulnerability in the future as it could reveal the queries which are necessary to access firefox's update server by inducing an error. Thus fixing this issue will remove a potential pitfall for developers working on with the offline mode and could potentially fix a security vulnerability as well. 
+The reporter of the bug noticed the issue while working on the permanent offline mode. However he forgot that his buld was working offline when he accessed the about menu and was thus mislead into believing his build was upto date. The incident could repeat with future developers who are testing the nightly build in offline mode. Furthermore, trying to access the update server despite knowing that the build is in offline mode can be an exploitable security vulnerability in the future as it could reveal the queries which are necessary to access firefox's update server by inducing an error. Thus fixing this issue will remove a potential pitfall for developers working with the offline mode and could potentially fix a security vulnerability as well. 
 
 ### Potential Risk
-Since the solution involves modifying the auto update feature of the firefox nightly build, a mistake might permanently disable the auto update feature even when not working in offline mode. Thus the correct block of code must be located and inhibited when in offline mode
+Since the solution involves modifying the auto update feature of the firefox nightly build, a mistake might permanently disable the auto update feature even when not working in offline mode. Thus the correct block of code must be located and inhibited when in offline mode.
 
 ### Solution
 The auto update feature is located in the extensions.js file of the gecko-dev repository. It is accessed through the path mozilla-central/source/toolkit/mozapps/extensions/content. Within this file the block of code responsible for auto-updating is is only accessed if the browser is not in offline mode. This can be checked using the command Services.io.offline. If the browser is not in offline mode, the auto update function is allowed to initiate. If the browser is in offline mode, the update function does not initiate and a message is sent to the console reminding the developer that the browser is in offline mode and auto updates are blocked currently.
