Adding the patch file.

--- a/doc/a3.md
+++ b/doc/a3.md
@@ -1,5 +1,8 @@
 https://bugzilla.mozilla.org/show_bug.cgi?id=701733
 
+Pull request link:
+https://github.com/mozilla/gecko-dev/pull/468
+
 ## Diagnosis
 ### Problem
 If the firefox nightly build is being run on "work offline" mode and someone attempts to access "About Nightly" under the help dropdown menu in the menubar, the about menu still checks for updates. This check fails as firefox is in offline mode and does not access the internet. Thus a default message of the build being up to date is displayed. This can be viewed as misleading and pointless as the build should know that the offline mode is activated and should not attempt to connect to the update server.
