--- a/browser/extensions/jaws-esr/locales/es-MX/jaws-esr.properties
+++ b/browser/extensions/jaws-esr/locales/es-MX/jaws-esr.properties
@@ -5,3 +5,8 @@
 # LOCALIZATION NOTE(jawsesr.dialog.msg): This string will be used for the browser modal
 # dialog message that prompts user to restart their browser. %S is brandShortName
 jawsesr.dialog.msg=Estás ejecutando una versión del lector de pantalla JAWS que ya no es compatible con las nuevas características de %S. Reinicia %S para desactivar las características no compatibles y se restaurará la compatibilidad completa con la accesibilidad.
+
+# LOCALIZATION NOTE(jawsesr.dialog.msg.e10sOn): This string will be used for the
+# browser modal dialog message that prompts user to restart their browser and
+# enable multiprocess. %S is brandShortName
+jawsesr.dialog.msg.e10sOn=Tu lector de pantalla es compartible con más de las últimas características de %S. Reinicia %S ahora para habilitarlas.
